force-app/main/default/objects/Service_Provider_Details__c/Service_Provider_Details__c.object-meta.xml
<CustomObject>
    <label>Service Provider Details</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Service Provider Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>