force-app/main/default/objects/Service_Provider_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>contains</operation>
            <value>Customer, Affiliate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Provider Details</relationshipLabel>
    <relationshipName>Service_Provider_Connector1</relationshipName>
    <type>Lookup</type>
</CustomField>