force-app/main/default/objects/Service_Provider_Details__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Service_Provider_Account_Name__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>