force-app/main/default/objects/Service_Provider_Details__c/fields/Account_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Link__c</fullName>
    <formula>HYPERLINK(Service_Provider_Account_Name__r.Id, Account_Name__c,&quot;_self&quot;)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>