force-app/main/default/objects/Service_Provider_Details__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT(Service_Provider_Account_Name__r.Account_Type__c)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>