force-app/main/default/objects/Service_Provider_Details__c/fields/Account_Type_Main__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Main__c</fullName>
    <formula>TEXT(Account__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>