force-app/main/default/objects/Service_Provider_Details__c/fields/Country_Main__c.field-meta.xml
<CustomField>
    <fullName>Country_Main__c</fullName>
    <formula>TEXT(Account__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>