force-app/main/default/objects/Service_Provider_Details__c/fields/Legal_Name_Main__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_Main__c</fullName>
    <formula>Account__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>