force-app/main/default/objects/Service_Provider_Details__c/fields/Region_Main__c.field-meta.xml
<CustomField>
    <fullName>Region_Main__c</fullName>
    <formula>TEXT(Account__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>