force-app/main/default/objects/Service_Provider_Details__c/fields/Service_Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider Account Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Details</relationshipLabel>
    <relationshipName>Service_Provider_Connector</relationshipName>
    <type>Lookup</type>
</CustomField>