force-app/main/default/objects/Service_Provider_Details__c/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <formula>Service_Provider_Account_Name__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Name</label>
    <type>Text</type>
</CustomField>