force-app/main/default/objects/Service_Provider_Details__c/fields/Trading_Name_Main__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name_Main__c</fullName>
    <formula>Account__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Name</label>
    <type>Text</type>
</CustomField>