force-app/main/default/objects/Service_Provider_Details__c/recordTypes/Service_Provider_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider_Record_Type</fullName>
    <active>true</active>
    <label>Service Provider Record Type</label>
</RecordType>